# CampaignGPT

./: README.md
campaigngpt/: README.md  pyproject.toml
campaigngpt/src/campaigngpt/: crew.py  main.py
campaigngpt/src/campaigngpt/config/: agents.yaml  tasks.yaml
campaigngpt_autogen/: OAI_CONFIG_LIST  main.py
campaigngpt_autogen/.cache/41/: cache.db
campaigngpt_langgraph/: Langgraph_doc.txt  main.py
